Added Apache2 license headers; cleaned up.

--- a/deployment/compose/compose-marbles-perf.yml
+++ b/deployment/compose/compose-marbles-perf.yml
@@ -1,13 +1,22 @@
-#   ___                           _  __
-#  / __| ___  __  _  _  _ _  ___ | |/ / ___  _  _
-#  \__ \/ -_)/ _|| || || '_|/ -_)| ' < / -_)| || |
-#  |___/\___|\__| \_,_||_|  \___||_|\_\\___| \_, |
-#  SecureKey Technologies Inc.                |__/
+#
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+# http:#www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
 #
 
-# SK LOCAL VME DEV DOCKER COMPOSE ENVIRONMENT
-# FOR HELP WITH THIS COMPOSE DEPLOYMENT PLEASE CONTACT:
-# Service Engineering <service.engineering@securekey.com>
 
 version: '2.1'
 
@@ -56,7 +65,7 @@ services:
       #
       FABRIC_SDK_CLIENT_CONFIGURATION: |
         name: "vme-network"
-        description: "Verified.Me Hyperledger Network"
+        description: "Marbles Hyperledger Network"
         version: 1.0.0
         client:
           organization: $$FABRIC_ORGANIZATION
